@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-06T08:14:44Z",
-  "count_outdated" : 174,
-  "uniques_outdated" : 148,
+  "timestamp" : "2023-09-07T00:50:57Z",
+  "count_outdated" : 175,
+  "uniques_outdated" : 149,
   "count" : 183,
   "uniques" : 156,
   "clones" : [
-    {
-      "timestamp": "2023-08-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-27T00:00:00Z",
       "count": 1,
